# EasyDiffractionApp

./: .gitignore  .project.pyproject  .project.qmlproject  CHANGELOG.md  DEPENDENCIES.md  LICENSE.md  README.md  RELEASE.md  cpp_project.pro  externalLicenses.md  py_project.pyproject  pyproject.py  pyproject.toml  pyproject_original.toml  qml_project.qmlproject  qml_sandbox.qmlproject  settings.ini  temp.cif  utils.py
.github/defaults/: probot-settings.yml
.github/workflows/: build.yml  on_create.yml  snapcraft.yml
Certificates/: ESS_cert_mac.p12
EasyDiffractionApp/: main.py
EasyDiffractionApp/Gui/: main.qml
EasyDiffractionApp/Gui/Components/: AnalysisDataChartQtCharts.qml  AnalysisFitables.qml  SampleStructure3dQtDataVisualization.qml  SampleSymmetry.qml
EasyDiffractionApp/Logic/: Background.py  ScreenRecorder.py
EasyDiffractionApp/Logic/DisplayModels/: DataModels.py  StatusModel.py
EasyDiffractionApp/Logic/Proxies/: Experiment.py  Project.py  Sample.py
docs/: index.html
docs/Developer/CodingRules/: CodingRules.md
docs/Developer/Diagrams/: classes_easyTemplateApp.dot  packages_easyTemplateApp.dot
easyDiffractionApp/: __init__.py  main.cpp  main.py  pyproject.toml  resources.qrc
easyDiffractionApp/Examples/Co2SiO4/: project.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases/: project.cif
easyDiffractionApp/Examples/DefaultProject/: project.cif
easyDiffractionApp/Examples/Dy3Al5O12/: project.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3/: project.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Xye/: hrpt.cif  hrpt.xye
easyDiffractionApp/Examples/PbSO4/: project.cif
easyDiffractionApp/Examples/Si3N4/: project.cif
easyDiffractionApp/Gui/: main.qml
easyDiffractionApp/Gui/Components/: AdpsView.qml  AnalysisConstraints.qml  AnalysisDataChart.qml  AnalysisDataChartBokeh.qml  AnalysisDataChartMatplotlib.qml  AnalysisDataChartQtCharts.qml  AnalysisFitables.qml  ApplicationWindow.qml  AtomsView.qml  CellView.qml  CloseDialog.qml  ConstraintsView.qml  DataChartView.qml  ExperimentAssociatedPhases.qml  ExperimentBackground.qml  ExperimentChartView.qml  ExperimentDataChart.qml  ExperimentDataChartBokeh.qml  ExperimentDataChartQtCharts.qml  ExperimentDataExplorer.qml  ExperimentInstrumentSetup.qml  ExperimentPeakProfile.qml  ExperimentPeakProfileG.qml  ExperimentPeakProfileL.qml  ExperimentSimulationSetup.qml  FitablesView.qml  GuiTestsController.qml  PhasesView.qml  ProjectExamples.qml  ResultsDialog.qml  SampleAdps.qml  SampleAtoms.qml  SampleCell.qml  SampleMsps.qml  SamplePhasesExplorer.qml  SampleStructure3d.qml  SampleStructure3dChemDoodle.qml  SampleStructure3dQtDataVisualization.qml  SampleStructure3dVtk.qml  SampleSymmetry.qml  (+7 more)
easyDiffractionApp/Gui/Globals/: Configs.qml  Constants.qml  Proxies.qml  Refs.qml  Variables.qml  Vars.qml  qmldir
easyDiffractionApp/Gui/Logic/: Helpers.js  LineCalculator.js  Paths.js  PyQmlProxy.js  qmldir  untitled.html
easyDiffractionApp/Gui/Pages/Home/: qmldir  (+2 more)
easyDiffractionApp/Gui/Sandbox/: HoverHandler.qml  ParamNames.qml  Parameter.qml  Recent.qml  Scrolling.qml  StatusBar.qml  TableView.qml  TextView.qml  VariableMenu.qml
easyDiffractionApp/Gui/Tests/: NoProjectCreated.qml  qmldir
easyDiffractionApp/Logic/: Analysis.py  Backend.py  Background.py  Calculators.py  Charts.py  Connections.py  Data.py  DataStore.py  Experiment.py  Fittables.py  Fitter.py  Fitting.py  Helpers.py  LogicController.py  MaintenanceTool.py  MatplotlibBackend.py  Model.py  Parameters.py  Phase.py  Plotting.py  Plotting1d.py  Plotting3d.py  Project.py  PyProxy.py  PyQmlProxy.py  QtDataStore.py  Sample.py  ScreenRecorder.py  Stack.py  State.py  Status.py  Summary.py  Tables.py  VTKBackend.py  __init__.py
easyDiffractionApp/Logic/DisplayModels/: DataModels.py  StatusModel.py
easyDiffractionApp/Logic/Proxies/: Background.py  BackgroundProxy.py  BokehBackend.py  Experiment.py  Fitting.py  MatplotlibBackend.py  Parameters.py  Phase.py  Plotting1d.py  Plotting3d.py  PlottingBase.py  PlottingBokeh.py  PlottingQtCharts.py  Project.py  QtChartsBackend.py  Sample.py  Stack.py  VtkBackend.py
easyDiffractionApp/Logic/VTK/: QVTKFrameBufferObjectItem.py  QVTKFramebufferObjectRenderer.py  SceneHelpers.py  __init__.py
easyExampleApp/: main.py
easyExampleApp/Gui/: main.qml
easyExampleApp/Gui/Components/: ApplicationWindow.qml  FitablesView.qml
easyExampleApp/Gui/Globals/: Variables.qml
easyExampleApp/Gui/Logic/: PyQmlProxy.js  qmldir
easyExampleApp/Logic/: PyQmlProxy.py
easyExampleApp/Logic/DisplayModels/: DataModels.py
examples/CIFs/: CeCuAl.cif  Si3N4_multi.cif
examples/Co2SiO4/: project.json
examples/Dy3Al5O12/: project.json
examples/MultiPhases/Si3N4/: project.cif  project.json
examples/PbSO4/: project.cif  project.json
examples/PdCw1d/Co2SiO4/: project.json
examples/PdCw1d/Dy3Al5O12/: project.json
examples/PdCw1d/La0.5Ba0.5CoO3/: project.cif  project.json
examples/PdCw1d/Na2Ca3Al2F14/: project.json
examples/PdCw1d/PbSO4/: project.cif  project.json
examples/PdCw1d/Si3N4/: project.cif  project.json
examples/PdCw1d/Si3N4_multi/: project.cif  project.json
examples/PdCw1dPol/Fe3O4/: project.cif  project.json  rhochi.py  rhochi.rcif
examples/PdCw1dPol/Ho2Ti2O7/: project.cif  project.json
examples/PdTof1d/CeCuAl/: project.cif  project.json
examples/PdTof1d/CeCuAl3/: project.cif  project.json
examples/PdTof1d/Na2Ca3Al2F14/: project.cif  project.json
snap/: snapcraft.yaml
snap/gui/: EasyDiffraction.desktop
tests/: multi.cif
tests/PbSO4/: project.json
tests/PbSO4/samples/: PbSO4.cif
tests/polar/: experiment.xye  structure.cif
tests/squish/: run_bdd.bat
tests/squish/suite_easyDiff_BDD/: .project  suite.conf
tools/Scripts/: BranchProtection.py  Config.py  CreateTestVideos.py  DeployFtp.py  FreezeApp.py  Functions.py  InstallApp.py  InstallerControlScript.js  InstallerInstallScript.js  MakeInstaller.py  RelinkCrysfml.py  RunApp.py  SignAppInstaller.py  SignCode.py  Signatures.py  SilentInstall.js  TranslateApp.py  UploadToFtp.py  VoiceApp.py  ZipAppInstaller.py  ZipArtifacts.py
(+228 files in other folders)
